# Mari

./: .gitignore  AGENTS.md  README.md  package.json  playwright.config.ts  vite.config.ts
.github/workflows/: ci.yml  release.yml
dev/: pi-bridge.ts
docs/: ADAPTERS.md  ARCHITECTURE.md  FRONTEND.md
e2e/: mock.spec.ts
src/: App.tsx  config.ts  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/icons/source/: README.md  make_dark.py  make_icon.py
src-tauri/icons/source/MariIcon.icon/: icon.json
src-tauri/src/: glass.rs  lib.rs  pi.rs
src/components/chat/: ComposerControls.tsx  Conversation.tsx  Markdown.tsx  ModelPicker.tsx  SessionSidebar.tsx  SettingsDialog.tsx
src/components/ui/: SendButton.tsx  input-message.tsx  select.tsx  thinking-steps.tsx
src/hooks/: useAgentSession.ts  useChatScroll.ts  usePiSession.ts
src/lib/: copy-text.ts  open-external.ts  settings.ts  shape-context.tsx  updater.ts
src/lib/adapters/mock/: index.ts
src/lib/adapters/pi/: index.ts  sessions.ts  store-format.ts
src/lib/agent/: types.ts
src/lib/pi/: client.ts  reducer.ts
tests/: claude-code-adapter.test.ts  pi-adapter.test.ts  reducer.test.ts  store-format.test.ts
